--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,12 @@ version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 mainClassName='App'
+applicationName = 'Hero-squad'
+task stage(dependsOn: ['clean', 'installApp'])
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -20,4 +23,9 @@ dependencies {
     compile 'org.slf4j:slf4j-simple:1.7.21'
     compile 'org.sql2o:sql2o:1.5.4'
     compile group: 'com.h2database', name: 'h2', version: '1.4.191'
+    compile 'org.slf4j:slf4j-simple:1.7.21'
+    compile 'com.sparkjava:spark-template-velocity:2.5.5'
+    compile 'org.sql2o:sql2o:1.5.4'
+    testCompile 'junit:junit:4.12'
 }
+
